@@ -1,3 +1,8 @@
+2009-03-08 MA Yue <velly.empire@gmail.com>
+
+    * Add Firefox stable repository.
+    * Add Typespeed, a typing practise game.
+
 2009-03-07 CHEN Yangyang <skabyy@gmail.com>
 
     * Automatically save/load repository response time.
